--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- Slides -->
     <div class="swiper-slide">
       <img src="public/images/agay.png" alt="agay">
-      <h1 class="word">Agay</h1>
+          <!-- Hier had ik een h1 teveel staan, die heb ik weg gedaan -->
+                     <!-- De rest van wat er in de h1 staat ziet er misschien raar uit, maar is noodzakelijk voor de animatie die op de titel zit -->
+                                <!-- Als je erover hovert splitst de stad en zie je het land -->
       <h1>
         Agay
         <span>Agay</span>
