alles opgeschoond en labels bij maan gezet

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <title>Wereldsteden</title>
   </head>
   <body>
-    <!-- Earth Slider container -->
+    <!-- aarde swiper -->
     <div class="swiper earth-swiper">
-      <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
@@ -64,33 +63,32 @@
           </h1>
         </div>
       </div>
-      <!-- If we need pagination -->
+      <!-- paginatie -->
       <div class="swiper-pagination"></div>
 
-      <!-- If we need navigation buttons -->
+      <!-- navigatie -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
 
-      <!-- If we need scrollbar -->
+      <!-- scrollbar -->
       <div class="swiper-scrollbar"></div>
     </div>
 
-    <!-- Moon Slider container (initially hidden) -->
+    <!-- Maan slider -->
     <div class="swiper moon-swiper" style="display: none">
-      <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
-        <!-- Moon slides -->
+        <!-- Maan slides -->
         <div class="swiper-slide">
-          <img src="public/images/mare.jpg" alt="Sea of Tranquility" />
+          <img src="public/images/mare.png" alt="Sea of Tranquility" />
           <h1>
-            Tranquillitatis
-            <span>Tranquillitatis</span>
-            <span>Tranquillitatis</span>
+            Tranquility
+            <span>Tranquility</span>
+            <span>Tranquility</span>
             <span>Moon</span>
           </h1>
         </div>
         <div class="swiper-slide">
-          <img src="public/images/cooper.jpg" alt="Copernicus Crater" />
+          <img src="public/images/coper.jpg" alt="Copernicus Crater" />
           <h1>
             Copernicus Crater
             <span>Copernicus Crater</span>
@@ -99,7 +97,7 @@
           </h1>
         </div>
         <div class="swiper-slide">
-          <img src="public/images/tycho.jpg" alt="Tycho Crater" />
+          <img src="public/images/tycho.png" alt="Tycho Crater" />
           <h1>
             Tycho Crater
             <span>Tycho Crater</span>
@@ -108,14 +106,14 @@
           </h1>
         </div>
       </div>
-      <!-- If we need pagination -->
+      <!-- Paginatie -->
       <div class="swiper-pagination"></div>
 
-      <!-- If we need navigation buttons -->
+      <!-- Navigatie -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
 
-      <!-- If we need scrollbar -->
+      <!-- scrollbar -->
       <div class="swiper-scrollbar"></div>
     </div>
   </body>
