test of naamgeving iets verandert

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap"
       rel="stylesheet"
     />
-    <title>Wereldsteden</title>
+    <title>Wereldsteden Finaal</title>
   </head>
   <body>
     <!-- aarde swiper -->
